--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.password=
-spring.datasource.username=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/DecaPay
+spring.datasource.password=zwdq8u3egdLhtw6hvRbQI6wV3enx3h46
+spring.datasource.username=decadev
+spring.datasource.url=jdbc:postgresql://dpg-cl895qn6e7vc73a3npig-a.oregon-postgres.render.com/decapay
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
